# uavcalc

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: uavcalcConfig.cmake.in
include/uavcalc/: aerodynamics.h
src/: aerodynamics.cpp
test/: main.cpp
